--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -897,6 +897,46 @@ menu:   #在这里加上
   guestbook: /guestbook```
 
 ---
+### 文章置顶
+修改 **hexo-generator-index **插件
+修改文件前先备份文件：**node_modules/hexo-generator-index/lib/generator.js** 
+把里面的内容替换为：
+```
+'use strict';
+var pagination = require('hexo-pagination');
+module.exports = function(locals){
+  var config = this.config;
+  var posts = locals.posts;
+    posts.data = posts.data.sort(function(a, b) {
+        if(a.top && b.top) { // 两篇文章top都有定义
+            if(a.top == b.top) return b.date - a.date; // 若top值一样则按照文章日期降序排
+            else return b.top - a.top; // 否则按照top值降序排
+        }
+        else if(a.top && !b.top) { // 以下是只有一篇文章top有定义，那么将有top的排在前面（这里用异或操作居然不行233）
+            return -1;
+        }
+        else if(!a.top && b.top) {
+            return 1;
+        }
+        else return b.date - a.date; // 都没定义按照文章日期降序排
+    });
+  var paginationDir = config.pagination_dir || 'page';
+  return pagination('', posts, {
+    perPage: config.index_generator.per_page,
+    layout: ['index', 'archive'],
+    format: paginationDir + '/%d/',
+    data: {
+      __index: true
+    }
+  });
+};
+```
+然后再每篇文章的yum头信息中增加**top: XXX**即可，值越大越靠前。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161214/172953022.png)
+
+**如果只置顶一两篇文章可以用简单的方法，把日期2016年改为2116年或其他远大于2016的数字，数字太小的话如2018年，到了2018年就不置顶了。**
+
+---
 ### 字体
 关于字体的修改开始时遇到很多问题，到后来才找到了原因，是因为引用的字体在**www.google.com/fonts**（默认是Google字体库）里找不到，或者是付费的字体。修改为免费的字体就正常使用了。打开[Google Fonts](www.google.com/fonts)，右上角查找你要的字体，能搜索到的话把全名复制下来，填写在配置文件中。
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161206/152548232.png)
