--- a/source/_posts/Dev/2016-11-04-Git教程.md
+++ b/source/_posts/Dev/2016-11-04-Git教程.md
@@ -127,6 +127,24 @@ origin  git@github.com:myleolan/learngit.git (fetch)
 origin  git@github.com:myleolan/learngit.git (push)```
 上面显示了可以抓取和推送的origin的地址。如果没有推送权限，就看不到push的地址。
 
+---
+**绑定多个远程仓库**
+先创建一个远程仓库，然后编辑项目目录中的**.git**文件夹下的**config**文件（不要编辑全局配置文件，并不是所有项目都要推送到两个仓库中）
+删掉fetch那一行，只保留地址，然后再添加一个地址，像下面这样子。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161215/083730007.png)
+注意，刚刚删掉了fetch,所以第一个地址是默认fetch
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161215/084008226.png)
+
+另一种方法：
+加入要添加的第二个地址是： git@github.com:MyLeoLan/blogpost_backup.git 
+那么输入：
+```
+git remote set-url --add (别名) git@github.com:MyLeoLan/blogpost_backup.git ```
+不过这种方法有时候不是特别灵，可能会把原来的第一个地址替换掉，大家有机会多测试反馈哈。
+
+**之后每次提交时用 `git push --all` 就可以同时提交到绑定的仓库啦。**
+
+---
 删除远程仓库：`git remote rm ［别名或仓库名］`
 
 * pull：本地 <\-- 远程   (如果你本地落后远程，必然要pull)
