--- a/source/_posts/杂项/2016-11-25-操作系统常用配置设置.md
+++ b/source/_posts/杂项/2016-11-25-操作系统常用配置设置.md
@@ -44,6 +44,12 @@ CentOS 修改root密码时报错：
 
 这是因为缺少某些lib库。解决办法：`yum reinstall -y cracklib-dicts`
 
+---
+## 使用yum时报fakesystemd相关错误
+解决：`yum swap -- remove fakesystemd -- install systemd systemd-libs`
+参考：http://stackoverflow.com/questions/36630718/docker-as-a-builder-cant-install-systemd-header-files
+
+
 
 
 ---
