--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -12,38 +12,8 @@ top: 10
 一些方便个人查询的链接，而不用打开笔记，不喜欢请忽略。
 
 ---
-# 环境搭建
-一键LNMP  http://lnmp.org
-一键LAMP  http://www.wdlinux.cn/bbs/forum-5-1.html
-
-php官网     http://www.php.net/
-phpmyadmin  http://www.phpmyadmin.net/
-mysql       http://www.mysql.com/
-	
-Discuz!     http://www.discuz.net/forum.php
-WordPress   https://cn.wordpress.org/
-
----
-# 网站管理
-joomla    https://www.joomla.org/
-WDCP      http://www.wdlinux.cn/wdcp/
-AMH       http://amh.sh/install.htm
-PHPCMS    http://www.phpcms.cn/
-
----
-# yum源
-网易163源          http://mirrors.163.com/
-阿里云源           http://mirrors.aliyun.com/  
-搜狐源             http://mirrors.sohu.com/
-中科大源           http://mirrors.ustc.edu.cn/
-
----
-# 系统下载
-CentOS官网        https://www.centos.org/
-Ubuntu官网        http://www.ubuntu.com/download
-Debian官网        https://www.debian.org/
-Fedora官网        https://getfedora.org/
-RedHat官网        https://www.redhat.com
+# 解决问题 Q&A
+stackoverflow：http://stackoverflow.com/
 
 ---
 # 运维
@@ -57,73 +27,20 @@ http://www.cnblogs.com/DamonTang/archive/2012/10/17/2727942.html
 瓦力：http://www.walle-web.io
 Jenkins：https://jenkins.io
 
-# 博客平台
-静态：
-Hexo       https://hexo.io
-Forbox     https://www.farbox.com
-Jekyll     http://jekyll.com.cn
-Pelican    http://blog.getpelican.com
-
-动态：
-typecho    http://typecho.org
-WordPress  https://cn.wordpress.org
-Z-Blog     https://www.zblogcn.com
-Emlog      http://www.emlog.net
-
-# 持续集成
-jenkins       http://www.jenkins.io/
-walle(瓦力)   http://www.walle-web.io/
-CheungSSH     http://www.oschina.net/p/cheungssh
-
-# 批量安装Linux之搭建服务器
-http://www.centoscn.com/image-text/setup/2015/0126/4564.html
-http://www.centoscn.com/image-text/setup/2014/0912/3720.html
-
-https://my.oschina.net/alanlqc/blog/147047
-
-# 梯子
-**搬瓦工VPS(支持支付宝)**
-新手教程：http://www.tennfy.com/2020.html
-购买链接：https://bwh1.net/vps-hosting.php
-其他教程：http://www.tennfy.com/2083.html
-
-XX-Net:https://github.com/XX-net/XX-Net
-
-https://www.dou-bi.co
-
-各种SS：https://liyuans.com/archives/free-ss-account-collection.html
-
-如有乐享：http://51.ruyo.net
-
-MarkSS:http://markss.xyz
-
----
-# 高精度IP定位
-普通精度IP定位：https://www.opengps.cn/Data/IP/IPSearch.aspx
-百度高精度IP定位：https://www.opengps.cn/Data/IP/IPHighAccuracy.aspx
-
----
-# Docker
-Docker平台：https://www.daocloud.io
-
----
-# Python生成二维码
-艺术二维码：https://github.com/sylnsfar/qrcode
-
----
-# 素材
-PS 插件和小软件推荐：http://www.4kong.com
 
 ---
 # 学习、技能
 **免费计算机编程类书籍**：https://haiwx.github.io/2016/09/13/CodeBooks/
 
+---
 **HTML**：
 
 W3school：http://www.w3school.com.cn/index.html
 http协议：http://www.kancloud.cn/kancloud/tealeaf-http
 Html5 tricks：http://www.html5tricks.com/jquery-china-map.html
 RGB值与色值：[RGB值与色值之间的联系](http://wenku.baidu.com/link?url=DA4A9qCNXngKm7Aa1_utP1Je4GLpa-pPm144H5X8uDsYk_K9xtGCNgRfMUSg_pJ3W3XMl8ueZZO1n8-WAEtpTd0mxPiS5TE4U6RQnEM1y97###)
+
+---
 **Python**：
 
 Python简明教程：http://www.kuqin.com/abyteofpython_cn/
@@ -132,8 +49,7 @@ Python在线手册：http://docs.pythontab.com/
 Python 练手：https://www.zhihu.com/question/29372574
 
 
-
-
+---
 **shell**：
 
 京峰免费shell课程：http://v.jfedu.net/web/course/2
@@ -141,27 +57,25 @@ github年度shell：https://www.zhihu.com/question/28182203
 Shell教程：http://c.biancheng.net/cpp/shell/
 
 
-
-
+---
 **PHP**：
 学PHP最快要多久？2个月学PHP：http://www.zhihu.com/question/39078661?plg_nld=1&plg_uin=1&plg_auth=1&plg_nld=1&plg_usr=1&plg_vkey=1&plg_dev=1
 
 
-
+---
 **版本控制**
 图形客户端：https://www.sourcetreeapp.com/
 Git知识：http://lib.csdn.net/base/git
 
 SVN：
 
-
+---
 **web**
 nginx中文文档：http://www.nginx.cn/doc/index.html
 
 
-
 ---
-# 别人的博客
+# 优秀的博客
 优秀Coding博客分享：https://coding.net/u/coding/p/awesome-blogs/git
 http://www.arao.me
 http://www.ilanni.com
@@ -197,14 +111,103 @@ http://lusongsong.com/
 https://qqdie.com/
 
 
+---
 
+---
+# 梯子
+**搬瓦工VPS(支持支付宝)**
+新手教程：http://www.tennfy.com/2020.html
+购买链接：https://bwh1.net/vps-hosting.php
+其他教程：http://www.tennfy.com/2083.html
 
+XX-Net:https://github.com/XX-net/XX-Net（免费）
 
+https://www.dou-bi.co
 
+各种SS：https://liyuans.com/archives/free-ss-account-collection.html
 
+如有乐享：http://51.ruyo.net
+见微Seemicro：http://www.seemssr.com
 
+MarkSS:http://markss.xyz（个人维护，免费共享）
 
+---
+# 环境搭建
+一键LNMP  http://lnmp.org
+一键LAMP  http://www.wdlinux.cn/bbs/forum-5-1.html
 
+php官网     http://www.php.net/
+phpmyadmin  http://www.phpmyadmin.net/
+mysql       http://www.mysql.com/
+	
+Discuz!     http://www.discuz.net/forum.php
+WordPress   https://cn.wordpress.org/
+
+---
+# Docker 平台
+Daocloud：https://www.daocloud.io
+
+---
+# 网站管理
+joomla    https://www.joomla.org/
+WDCP      http://www.wdlinux.cn/wdcp/
+AMH       http://amh.sh/install.htm
+PHPCMS    http://www.phpcms.cn/
+
+---
+# yum源
+网易163源          http://mirrors.163.com/
+阿里云源           http://mirrors.aliyun.com/  
+搜狐源             http://mirrors.sohu.com/
+中科大源           http://mirrors.ustc.edu.cn/
+
+---
+# 系统下载
+CentOS官网        https://www.centos.org/
+Ubuntu官网        http://www.ubuntu.com/download
+Debian官网        https://www.debian.org/
+Fedora官网        https://getfedora.org/
+RedHat官网        https://www.redhat.com
+
+---
+# 博客平台
+静态：
+Hexo       https://hexo.io
+Forbox     https://www.farbox.com
+Jekyll     http://jekyll.com.cn
+Pelican    http://blog.getpelican.com
+
+动态：
+typecho    http://typecho.org
+WordPress  https://cn.wordpress.org
+Z-Blog     https://www.zblogcn.com
+Emlog      http://www.emlog.net
+
+---
+# 持续集成
+jenkins       http://www.jenkins.io/
+walle(瓦力)   http://www.walle-web.io/
+CheungSSH     http://www.oschina.net/p/cheungssh
+
+---
+# 批量安装Linux之搭建服务器
+http://www.centoscn.com/image-text/setup/2015/0126/4564.html
+http://www.centoscn.com/image-text/setup/2014/0912/3720.html
+
+https://my.oschina.net/alanlqc/blog/147047
+
+---
+# Python生成二维码
+艺术二维码：https://github.com/sylnsfar/qrcode
+
+---
+# 素材
+PS 插件和小软件推荐：http://www.4kong.com
+
+---
+# 高精度IP定位
+普通精度IP定位：https://www.opengps.cn/Data/IP/IPSearch.aspx
+百度高精度IP定位：https://www.opengps.cn/Data/IP/IPHighAccuracy.aspx
 
 
 
