修改部分文件排版，增加内容，增加备案号

--- a/source/_posts/杂项/2016-11-03-vim常用命令.md
+++ b/source/_posts/杂项/2016-11-03-vim常用命令.md
@@ -14,8 +14,8 @@ date: 2016-11-03 23:31:47
 按「i」切换进入插入模式「insert mode」，按"i"进入插入模式后是从光标
 当前位置开始输入文件；
   
-### 按「a」进入插入模式后，从当前光标所在位置的下一个位置开始输入文字。
-### 按「o」进入插入模式后，是插入新的一行，从行首开始输入文字。
+## 按「a」进入插入模式后，从当前光标所在位置的下一个位置开始输入文字。
+## 按「o」进入插入模式后，是插入新的一行，从行首开始输入文字。
   : **w filename** （输入 「w filename」将文章以指定的文件名filename保存）
   : **wq** (输入「wq」，存盘并退出vim)
   : **q!** (输入q!， 不存盘强制退出vim)
@@ -25,7 +25,8 @@ date: 2016-11-03 23:31:47
 # 移动光标
 vi可以直接用键盘上的光标来上下左右移动，但正规的vi是用小写英文字母
 「h」、「j」、「k」、「l」，分别控制光标左、下、上、右移一格。
-* 按数字「0」：移到行首。
+* 按数字「0」或「^(shift+6)」：移到行首。在行首第一个字符是空白字符时有点区别。
+* 按「shift+$」：移到行尾。
 * 按「G」：移动到文章的开头。
 * 按「w」：光标跳到下个字符串的开头
 * 按「e」：光标跳到下个字符串的字尾
