--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -129,7 +129,11 @@ https://www.dou-bi.co
 如有乐享：http://51.ruyo.net
 见微Seemicro：http://www.seemssr.com
 
-MarkSS:http://markss.xyz（个人维护，免费共享）
+MarkSS:
+http://markss.xyz（个人维护，免费共享）
+http://markss.club（个人维护，免费共享）
+
+GFW论坛：https://bit.no.com:43110/GFWtalk.bit/?Topics:10_1NV87VmSkezRyz8NbFpdkYJsJUSfXx7LJa/
 
 ---
 # 环境搭建
