--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -848,6 +848,10 @@ footer:
 #<a target="_blank" href="http://www.miitbeian.gov.cn/">粤ICP备16026009号-2</a>```
 
 ---
+### 开源许可
+知识共享署名4.0 国际许可协议：https://creativecommons.org/choose
+
+---
 ### 居中模块
 把要居中的模块、代码、文字、插件、外链等，放在下面代码的中间即可居中显示。
 ```
