--- a/source/_posts/杂项/2016-12-06-博客中插入音乐-视频.md
+++ b/source/_posts/杂项/2016-12-06-博客中插入音乐-视频.md
@@ -28,10 +28,10 @@ Markdown 作为轻量级的标记语言，兼容 html 语法，可以直接在 M
 <source src="movie.mp4">
 </video>```
 
-经测试不支持内嵌优酷之类的flash播放，**src**后面的地址要指向视频文件。**width**和**height**最好填写好对应视频的大小，不然周围有边框不好看。视频居中要用`<blockquote class="blockquote-center">我是内容，替换我</blockquote>`才行。下面给大家偷偷放女票的片片，还没告诉她，希望不要打我(=^ ^=)
+经测试不支持内嵌优酷之类的flash播放，**src**后面的地址要指向视频文件。**width**和**height**最好填写好对应视频的大小，不然周围有边框不好看。视频居中要用`<blockquote class="blockquote-center">我是内容，替换我</blockquote>`才行。下面给大家放女票的可爱小短片，希望不要打我(=^ ^=)
 <blockquote class="blockquote-center">
-<video width="544" height="962" controls>
-<source src="http://ofyfogrgx.bkt.clouddn.com/blog/20161207/085157022.mp4">
+<video width="270" height="480" controls>
+<source src="http://ofyfogrgx.bkt.clouddn.com/1009_cbc659118e3b4856b1a3a966bb0ac230.f0.mp4">
 </video>
 </blockquote>
 
@@ -54,7 +54,7 @@ Markdown 作为轻量级的标记语言，兼容 html 语法，可以直接在 M
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161206/164604641.png)
 
 <center>
-<embed src="https://music.163.com/style/swf/widget.swf?sid=450980312&type=0&auto=0&width=310&height=430" width="330" height="450"  allowNetworking="all"></embed>
+<embed src="//music.163.com/style/swf/widget.swf?sid=32196804&type=2&auto=0&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
 </center>
 
 
