--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -32,6 +32,8 @@ Jenkins：https://jenkins.io
 # 学习、技能
 **免费计算机编程类书籍**：https://haiwx.github.io/2016/09/13/CodeBooks/
 
+**godeye**:http://www.godeye.org/
+
 ---
 **HTML**：
 
