修改了几篇文章

--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -139,6 +139,7 @@ GFW论坛：https://bit.no.com:43110/GFWtalk.bit/?Topics:10_1NV87VmSkezRyz8NbFpd
 
 ---
 # 环境搭建
+oneinstack一键环境  https://oneinstack.com
 一键LNMP  http://lnmp.org
 一键LAMP  http://www.wdlinux.cn/bbs/forum-5-1.html
 
