--- a/source/_posts/环境搭建/2016-11-02-Node-js开发环境搭建.md
+++ b/source/_posts/环境搭建/2016-11-02-Node-js开发环境搭建.md
@@ -69,6 +69,16 @@ npm模块安装路径
 指定路径：**/usr/local/node/版本号/lib/node_modules**
 
 ---
+# nvm & n
+有很大一部分人喜欢用**nvm**来管理node.js 因为它可以简单实现多版本共存，但是并不是适合所有人，适合那些专业开发的人员，经常要调试不同版本的兼容性的开发者，另外容易造成版本冗余。
+新兴的**n**也比较火热，不过n在mac中似乎是个坑，期待以后会变得更好。
+这里给个链接，可以去看看。
+[管理 node 版本，选择 nvm 还是 n？](http://web.jobbole.com/84249/)
+[利用n和nvm管理Node的版本](http://it.taocms.org/03/3079.htm)
+[nvm安装node](http://www.tuicool.com/articles/vmi6Zv7)
+[nvm 管理不同版本的 node 与 npm](http://www.tuicool.com/articles/Vzquy2)
+
+---
 
 # 淘宝 NPM 镜像源
 国内直接使用 npm 的官方镜像可能非常慢的，可以使用淘宝 NPM 镜像。
