--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -250,6 +250,11 @@ search:
 ```
 
 ## 主题配置
+
+Material主题：https://material.viosey.com/start/#install-material
+Material项目地址：https://github.com/viosey/hexo-theme-material
+
+
 推荐Next主题，简单简洁，官网：http://theme-next.iissnan.com/
 安装最新版：
 ```
