--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -343,6 +343,7 @@ yum clean oldheaders #清除缓存目录下旧的 headers```
 
 ---
 **yum 软件组**
+软件组管理功能实测并不是很好用，经常出现没有包可安装的问题，可能原因有几个，换了yum源，软件组信息已经变更了，等等，平时用处不大，就没有去研究咯，知道怎么解决的朋友欢迎反馈。
 列出软件组`yum grouplist` 已安装的软件组 
 ![](http://ofyfogrgx.bkt.clouddn.com/blog/20161212/165538270.png)
 未安装的软件组 
