--- a/source/_posts/路由/2017-01-04-我不仅仅是一个路由器.md
+++ b/source/_posts/路由/2017-01-04-我不仅仅是一个路由器.md
@@ -10,32 +10,131 @@ abbrlink: 106
 date: 2017-01-04 17:20:45
 ---
 
-说起路由器，回想起以前折腾路由的日子，不对，现在依然在折腾。从
+说起路由器，回想起以前折腾路由的日子，不对，现在依然在折腾。不过，我折腾过的路由并不多，华为hg255d,newifi,斐讯302B，斐讯K1，斐讯K2，极路由1S，乐携路由，TP-Link某低端机子，AirPort Time Capsule，网件R8000；目前就这些，除了剁手花了近700软妹币买的螃蟹R8000主板，和Time Capsule ，其他都是些低端路由，虽然很折腾人，但也学到了很多东西；写这篇是因为我快不记得刷机步骤了，毕竟忙着忙着就好久没有去折腾了。
 
+太低端的就不说了，只是刷个固件没什么好玩的，能改装的路由才是好路由。折腾路由的原因大多是不想让路由仅仅只是个路由！！！这点很重要，于是有了**去广告，搭梯子，VPN，破解校园网，游戏加速，宽带多拨，各种BT、PT、远程、离线下载，文件共享、远程监控、网络打印机、各种小型服务器搭建**等等。
+
+---
+# MTK7620x系列
+7620x系列的路由因为CPU的通用性，成本低等因素，快速的成为厂家首选，16年这一两年内还是中端路由的首选，时长占用量大了就有大神去开发固件。相互移植也变得简单，比较有代表性的固件是：**华硕Padavan，小云newifi如意云，openwrt，Tomato，极路由，潘多拉，DD-WRT，小米miwifi**等等，这些固件都有7620系列的版本。
+
+华硕Padavan固件（支持超多机型）：
+http://www.right.com.cn/forum/thread-161324-1-1.html
+http://rt.cn2k.net
+极玩固件（自带SS，不能装插件）：http://www.geewan.com/download.php?id=4
+
+推荐论坛：[恩山论坛](http://www.right.com.cn/forum/forum.php)
+
+---
+## newifi mini
+官方论坛：http://bbs.newifi.com/forumall.php
+http://www.newbandeng.com/forum.php
+能找到你想要的。
+
+newifi是个很好刷的路由，我记得官方的就是**不死uboot**（就是那种不管刷什么固件都不影响uboot，不会变砖的路由），直到极路由固件被移植到newifi上后这个神话就被打破了，极路由的固件会覆盖原有的boot导致无法再刷其他路由固件，这种问题貌似只能用**TTL**或**编程器**修复，所以刷极路由固件需谨慎。
+
+**刷机**：一般是网线LAN连电脑，电脑设置静态IP，192.168.1.10
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/120913764.png)
+捅菊花插电源，不要放手，5秒左右两个或3个灯在不停的闪，这时浏览器打开192.168.1.1就可以看到固件选择界面了。
+
+### 救砖
+我的话是买了2个ROM，还有编程器，用TTL或编程器恢复需要有电烙铁和一定的手工能力，TTL和其他路由方法是一样的，结合tftp一起用。编程器的话选择支持24,25系列的编程器，某宝搜路由编程器一大堆。店家会送驱动软件，没有就自己下载一个。相信能到这个地步的也是敢于作死的。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/122600937.jpg)
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/121622216.jpg)
+
+[『零基础玩newifi』【四】TTL 救砖大法详解](http://www.newbandeng.com/thread-10936-1-1.html)
+[不拆机备份编程器固件](http://www.newbandeng.com/forum.php?mod=viewthread&tid=10893&extra)
+[不拆机刷编程器固件](http://www.newbandeng.com/forum.php?mod=viewthread&tid=10946&extra=)
+
+---
+## 极路由1s
+极路由刷和newifi是差不多的，唯一要注意的就是备份key,不然刷回极路由后没有key是连接不了插件商城的。
+**备份key**
+http://www.hiwifimi.com/archives/114
+http://www.right.com.cn/forum/thread-137774-1-1.html
+不死uboot的breed平台也可以备份key
+
+**刷入不死uboot**
+http://bbs.hiwifi.com/forum.php?mod=viewthread&tid=74992&highlight=uboot
+不死uboot下载：http://www.right.com.cn/forum/thread-161906-1-1.html
+http://www.right.com.cn/forum/thread-171116-1-1.html
+
+---
 
 ---
 # 网件
+以前不知道网件是好东西，早就向往梅林固件了，大概知道网件有几款能刷梅林固件，在大天朝的长宽网络下，实在无法再忍受这种号称100M光纤，但实际使用只有512k猫一样的感觉，还是恶心的三层NAT，什么DDNS，到了这里还是死在了外面。不过[koolshare论坛](http://koolshare.cn/portal.php)有大神开发了DDNS穿透，通过一台中继服务器，好像什么DNS都能穿，有空要试试。
 
 
+网件也可以刷DD，OpenWRT等等，但就界面来说，还是梅林比较漂亮。DD的亮点我还没找到，没怎么用过，Open的话多拨是个自成一派的东西。但是貌似Open的信号是稍微弱一点点的。
+
+配置对比图，不过这里没有R8000，R8000是2USB，3频WiFi，双核1.0GHz
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/145246017.jpg)
+
+**备份routerinfo**参考：
+http://koolshare.cn/forum.php?mod=viewthread&tid=73278&highlight=routerinfo
+http://koolshare.cn/thread-44948-1-1.html
+
+---
+## R6700
+R6700刷梅林
+http://www.acwifi.net/715.html
+http://www.good.cc/1242802.html
+
+---
+## R8000
+一般的刷固件之前都要先备份一下routerinfo,传统的备份方法是打开路由器ip/debug.htm就可以看到各种信息，或telnet连接路由，输入routerinfo就能出来各种信息。可能是R8000比较新，目前还没有办法备份出来。但是可以通过nvm把固件完整备份出来，不过方法是参照R6400的方法，不知道是不是一样适用（CPU架构不同）
+
+### 开刷
+不过R8000目前刷没什么困难的。
+
+**[固件发布] 【R8000】【20161209】380.63-2-X7.2.1 大爆炸**
+http://koolshare.cn/forum.php?mod=viewthread&tid=73436&highlight=R8000
+我刷的时候梅林版本是第二次发布。
+
+
+**官方刷梅林chk固件直刷 ,刷完英文直接拔电源重启，变中文再恢复出厂设置**
+固件：http://firmware.koolshare.cn/merlin_8wan_firmware/R8000/Netgear%20R-series%20initial%20files/
+
+**第三方刷梅林trx固件直刷，刷完英文直接拔电源重启，变中文再恢复出厂设置**
+
+**梅林刷官方OFW直刷，再捅菊花恢复出厂设置**
+固件：http://firmware.koolshare.cn/merlin_8wan_firmware/R8000/Merlin%20to%20OFW/
+
+
+因为R8000是3频WiFi，也就是有两个5G芯片，频段是不同的，当然也可以3个WiFi合并为一个，自动分配频段，这样就不会拥挤了。
+
+**信号合并SmartConnect优化**
+http://koolshare.cn/thread-73365-1-1.html
+
+---
+## 网件路由救砖
+官方救砖教程：http://club.netgear.cn/Knowledgebase/Document_detail.aspx?Did=873
+
+官方救砖教程无效的话就要把螃蟹拆开来，上TTL线。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/151747137.jpg)
+用SecureCRT或者其他的终端连上去（有时某些终端是不支持一些功能的，比如xshell和putty的功能就互不相同，那就换一个终端）。
+
+**开机不断Ctrl+C暂停设备启动，停止后，会停留在CFE命令行模式，您在模式下输入小写的help就可以看到各个命令的使用方法**
+
+在shell中输入**tftpd**（R8000的tftpd并不会自动启动，所以那些不用串口线卡时间刷netgear的教程根本没用），然后就直接在本机配ip，网关192.168.1.1，命令行输tftp，binary模式，put一个新固件上去。
+
+其他救砖教程：
+http://koolshare.cn/thread-42961-1-1.html
+http://koolshare.cn/thread-44948-1-1.html
+http://www.expreview.com/33689-2.html
 
 
 ---
----
-# newifi
+# 梅林系统
+梅林系统有[官方固件](http://asuswrt.lostrealm.ca/)和民间固件，官方固件是专门为华硕路由定制的，但是华硕的好多机型和网件的机型配置基本是一致的，可以方便的移植过来。民间固件目前机型比较完善的是[koolshare论坛](http://firmware.koolshare.cn/)，[恩山论坛](http://www.right.com.cn/forum/forum.php)，[无线论坛](http://www.anywlan.com/)
+KS论坛支持的机型是最多的，恩山论坛中低端路由支持贴比较多。
 
+梅林固件是这样子的
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/154859008.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/155001133.png)
 
-
-
-
-
----
----
-# 极路由
-
-
-
-
-
+插件的使用比较简单，而且也有链接说明，是比较人性化的定制，之后有什么比较好玩的再更新博客！
 
 
 ---
