--- a/source/_posts/路由/2017-01-04-我不仅仅是一个路由器.md
+++ b/source/_posts/路由/2017-01-04-我不仅仅是一个路由器.md
@@ -15,8 +15,8 @@ date: 2017-01-04 17:20:45
 太低端的就不说了，只是刷个固件没什么好玩的，能改装的路由才是好路由。折腾路由的原因大多是不想让路由仅仅只是个路由！！！这点很重要，于是有了**去广告，搭梯子，VPN，破解校园网，游戏加速，宽带多拨，各种BT、PT、远程、离线下载，文件共享、远程监控、网络打印机、各种小型服务器搭建**等等。
 
 ---
-# MTK7620x系列
-7620x系列的路由因为CPU的通用性，成本低等因素，快速的成为厂家首选，16年这一两年内还是中端路由的首选，时长占用量大了就有大神去开发固件。相互移植也变得简单，比较有代表性的固件是：**华硕Padavan，小云newifi如意云，openwrt，Tomato，极路由，潘多拉，DD-WRT，小米miwifi**等等，这些固件都有7620系列的版本。
+# MTK7620系列
+7620系列的路由因为CPU的通用性，成本低等因素，快速的成为厂家首选，16年这一两年内还是中端路由的首选，时长占用量大了就有大神去开发固件。相互移植也变得简单，比较有代表性的固件是：**华硕Padavan，小云newifi如意云，openwrt，Tomato，极路由，潘多拉，DD-WRT，小米miwifi**等等，这些固件都有7620系列的版本。
 
 华硕Padavan固件（支持超多机型）：
 http://www.right.com.cn/forum/thread-161324-1-1.html
@@ -129,6 +129,8 @@ http://www.expreview.com/33689-2.html
 # 梅林系统
 梅林系统有[官方固件](http://asuswrt.lostrealm.ca/)和民间固件，官方固件是专门为华硕路由定制的，但是华硕的好多机型和网件的机型配置基本是一致的，可以方便的移植过来。民间固件目前机型比较完善的是[koolshare论坛](http://firmware.koolshare.cn/)，[恩山论坛](http://www.right.com.cn/forum/forum.php)，[无线论坛](http://www.anywlan.com/)
 KS论坛支持的机型是最多的，恩山论坛中低端路由支持贴比较多。
+
+[Koolshare固件指南 & FAQ，新人浏览观看](http://koolshare.cn/thread-4602-1-1.html)
 
 梅林固件是这样子的
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/154859008.png)
