--- a/source/_posts/杂项/2017-01-05-黑苹果.md
+++ b/source/_posts/杂项/2017-01-05-黑苹果.md
@@ -7,7 +7,7 @@ tags:
 top: 10
 abbrlink: 3958
 date: 2017-01-05 16:04:47
-keywords: 黑苹果
+keywords:
 ---
 
 最近整理资料，早就想写一篇黑苹果了，自从入手了百苹果后就没再折腾黑苹果了，说真的，黑苹果适合那些作死折腾的人，不想折腾的还是某宝找远程安装吧。
@@ -19,19 +19,25 @@ keywords: 黑苹果
 黑苹果需要有丰富的系统知识做支撑，不然遇到困难真的没法解决。
 
 ---
-安装系统都是一样的，制作引导需要一点技巧。引导有BootThink、[Chameleon(变色龙)](http://chameleon.osx86.hu/)、[Clover(四叶草)](https://sourceforge.net/projects/cloverefiboot/),
+# 虚拟机安装
+在虚拟机中安装Mac操作系统也是可以的，但是显卡会有限制，最大128M显存，自然也就特别特别卡了。安装时一般需要ISO版（见工具包中的：dam2iso）的系统，安装完成后可以用原生引导，也可以更换为ISO版的其他引导。
+VirtualBox自带有Mac选择，安装时选择就行了；VMware需要下载一个解锁补丁，不同的VM版本补丁不同，搜索就有。安装补丁之后安装系统就能看到Mac选择了。
+
+---
+安装系统都是一样的，制作引导需要一点技巧。引导有BootThink、[Chameleon(变色龙)](http://chameleon.osx86.hu/)、[Clover(四叶草)](https://sourceforge.net/projects/cloverefiboot/)等好几种。
 
 黑苹果想要完美一些就尽量选择中高端机型，硬件和白苹果类似的最好，当然，太过新颖的机型也可能不支持的。
 
-工具打包：
-
 ---
-# Boot + MBR
+**工具打包下载：**http://ofyfogrgx.bkt.clouddn.com/黑苹果安装工具打包.zip
+
+# Boot+MBR
 **适合不支持UEFI的老机子或不打算升级的情况。**
-安装镜像如果是下载原版的要破解剥离引导层后才能使用，费时费力，建议下载破解好的懒人版之类的。
+安装镜像如果是下载原版的要破解剥离引导层(见工具包中的：官方DMG格式提取安装文件)后才能使用，费时费力，建议下载破解好的懒人版之类的。
 
 这种模式选用3种引导中的哪一种都行，不建议选BootThink，貌似不维护了，所以不支持新的系统了。如果是变色龙的话就方便很多。
 
+---
 ## Windows下的准备工作
 先安装JAVA环境，Microsoft .NET Framework 2.0硬盘模式要打开AHCI（在BIOS中开启）
 
@@ -40,24 +46,25 @@ keywords: 黑苹果
 
 2.安装“BootThink或Win版色龙安装器GUI安装
 
-3.安装MacDrive【win下读写HFS分区】，也可以汉化破解，不破解也没关系。
+3.安装MacDrive或（win下读写HFS分区），也可以汉化破解，不破解也没关系。
 
 4.运行“硬盘安装助手”，选择下载来的ISO，取消下面的三个选项，选择写入10G的分区中。
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/172518781.png)
 
-如果遇到提示无法写入，请将10G分区进行如下操作：快速格式化为NTFS-->磁盘管理工具内删除分区-->新建简单卷（不要格式化）。
+如果遇到提示无法写入，请将10G分区进行如下操作：快速格式化为NTFS\-->磁盘管理工具内删除分区\-->新建简单卷（不要格式化）。
 
-写入过程中会显示程序未响应，这是正常现象，不用管它，过一会会提示写入完成。然后打开**分区助手【好用】.exe**看看分区标记是不是AF不是的话改为AF  ，之后重启开始安装。
+写入过程中会显示程序未响应，这是正常现象，不用管它，过一会会提示写入完成。然后打开**分区助手【好用】.exe**看看分区标记是不是AF不是的话改为AF,之后重启开始安装。
 
+---
 ## 安装Mac系统
-1.重启后进入BootThink或变色龙，选择“OS X Lion Install DVD“字样的回车。稍后进入安装界面，
+1.重启后进入BootThink或变色龙，选择“OS X Install DVD“字样的回车。稍后进入安装界面，
 
 **安装遇到，白屏 且 鼠标 在屏幕左上角 无限彩色风火轮？**
 可以安装或替换\System\Library\Extensions\FakeSMC.kext或者\Extra\Extensions\FakeSMC.kext为FakeSMC.kext.2.5.zip【解压出来】版的 即可。
-删掉 /System/Library/Caches/com.apple.kext.caches/Startup/全部文件
+删掉/System/Library/Caches/com.apple.kext.caches/Startup/全部文件
 
 **安装过程遇到五国语言卡死？**
-这个问题比较复杂
+这个问题比较复杂，我差不多忘记了怎么处理了。
 
 2.选择菜单栏中的**“实用工具”**里的**“磁盘工具”**，在左侧选择30G的分区，点击**“抹掉”**。格式选择“Mac OS 扩展（日志式）”，名称可任意。然后点下面的“抹掉”抹盘完成后关闭磁盘工具，回到安装程序。
 
@@ -67,14 +74,15 @@ keywords: 黑苹果
 
 5.安装完成后提示重启，点击“重新启动”，由于此时没有安装kext，系统会一直停留在菊花旋转界面，需要手动按电源键关机后重启。
 
-6.重启后选择进入另一个系统【就是安装前用的win系统】，删除安装的苹果分区内的X:/System/Library/CoreServices/SetupAssistant.app/Contents/Resources/DeviceSection.bundle否则进入系统时会提示找不到键盘而无法进入。
+6.重启后选择进入另一个系统【就是安装前用的win系统】，删除安装的苹果分区内的**X:/System/Library/CoreServices/SetupAssistant.app/Contents/Resources/DeviceSection.bundle**否则进入系统时会提示找不到键盘而无法进入。
 
-建议此时把Kext Wizard.app等软件放到Mac的分区中或\System\Library\Extensions到时点开就可以安装。EvOreboot.kext的作用是解决重启和关机时不断电的问题。
+建议此时把Kext Wizard.app等软件放到Mac的分区中或\System\Library\Extensions到时点开就可以安装。
 
 7.重启后用BootThink或变色龙进入Mac系统，选择语言，创建账户密码，注册AppleID可直接跳过，正常情况下设置完成后可进入Mac系统。
 
 如果设置完成后又重新回到首页选择语言、创建账户，并且无限循环，恭喜你，这次安装失败了，再手动重启选择安装文件写入的分区重新安装一遍，并删除那个不能识别键盘的文件。
 
+---
 ## 在Mac下安装硬件kext
 此时能进入系统了，如果显卡没有驱动是超级卡的，接着来一步一步驱动各个硬件。
 进入Mac系统后，双击解压“Kext Wizard.zip”，得到kext安装工具“Kext Wizard”。
@@ -83,6 +91,7 @@ keywords: 黑苹果
 
 安装完或手动把Kext复制进了**System/Library/Extensions**的可以运行**磁盘工具修复权限**
 
+---
 ## 修改设备ID驱动
 某些硬件型号是一样的，但是设备识别码（ID）不同，或者是不同型号共用一个设备ID，这时需要修改设备ID才能驱动了。
 
@@ -91,10 +100,10 @@ keywords: 黑苹果
 
 2.右键桌面上的AppleYukon2.kext，选择显示包内容，找到Contents/Info.plist，双击编辑Info.plist，展开Information Property List下的 IOKitPersonalities
 
-3.找到Yukon开头的第一行，左侧修改为Yukon-88E8042  ；展开Yukon-88E8042 ，找到IOPCIPrimaryMatch把它右边的内容改成
+3.找到Yukon开头的第一行，左侧修改为Yukon-88E8042；展开Yukon-88E8042 ，找到IOPCIPrimaryMatch把它右边的内容改成
 0x435711ab（0x435711ab是在Win下用设备管理器-硬件详细信-硬件ID查得，你的网卡ID可能不是这个，请提前确认） 
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/174558145.png)
-找到Model 把它右面的内容改成Marvell Yukon 88E8042 PCI-E  Singleport Copper SA【改为要显示的网卡名字，最好不要有中文】。
+找到Model把它右面的内容改成Marvell Yukon 88E8042 PCI-E  Singleport Copper SA（改为要显示的网卡名字，最好不要有中文）。
 
 4.保存文件，用桌面上的“AppleYukon2.kext”替换System/Library/Extensions/IONetworkingFamily.kext/Contents/PlugIns/AppleYukon2.kext。
 然后使用磁盘工具修复此分区的权限，重新启动后网卡即可使用。
@@ -102,16 +111,17 @@ keywords: 黑苹果
 其他驱动也是类似这样修复的。这里提供一个思路，黑苹果绝对不仅仅是这么简单。
 
 ---
-# UEFI + GPT
+# UEFI+GPT
 直接用原版镜像安装
 **适合支持UEFI或在线升级的情况。建议用四叶草引导。**
+
+制作引导参考：
 http://bbs.feng.com/read-htm-tid-7534160.html
 https://www.maoshu.cc/993.html
 http://jingyan.baidu.com/article/d5a880eb8bd51113f047cc76.html
 
-
-
-
-
+安装盘按Boot+MBR的方法制作好，制作好引导后直接，启动安装即可，因为是原版镜像，一般安装成功的几率是很高的，基本不会有什么错误。安装好后的各个驱动问题也是按**修改设备ID驱动**的方法解决，也可以自己下载kext文件放进去然后修复。
 
 ---
+
+
