--- a/source/_posts/路由/2017-01-04-不仅仅是一个路由器.md
+++ b/source/_posts/路由/2017-01-04-不仅仅是一个路由器.md
@@ -1,9 +1,9 @@
 ---
-title: 我不仅仅是一个路由器
+title: 不仅仅是一个路由器
 categories:
   - 路由
 tags:
-  - 我不仅仅是一个路由器
+  - 不仅仅是一个路由器
 top: 10
 keywords: '网件,newifi,极路由'
 abbrlink: 106
@@ -85,6 +85,32 @@ http://www.good.cc/1242802.html
 ## R8000
 一般的刷固件之前都要先备份一下routerinfo,传统的备份方法是打开路由器ip/debug.htm就可以看到各种信息，或telnet连接路由，输入routerinfo就能出来各种信息。可能是R8000比较新，目前还没有办法备份出来。但是可以通过nvm把固件完整备份出来，不过方法是参照R6400的方法，不知道是不是一样适用（CPU架构不同）
 
+备份方法：
+```
+leolan@R8000-0000:/dev# cat /proc/mtd    #查看cfe设备
+dev:    size   erasesize  name
+mtd0: 00080000 00020000 "boot"
+mtd1: 00180000 00020000 "nvram"
+mtd2: 04000000 00020000 "linux"
+mtd3: 03c4c930 00020000 "rootfs"
+mtd4: 00040000 00020000 "board_data"
+mtd5: 04000000 00020000 "brcmnand"
+
+#备份相应的区块
+dd if=/dev/mtd0 of=/tmp/cfe.bin     
+dd if=/dev/mtd1 of=/tmp/nvram.bin```
+
+恢复：
+打开命令窗口，重新Telnet到路由，输入用户名，然后是密码登录路由器，把文件上传到/tmp目录下，接着输入以下命令：
+```   
+cd /tmp
+mtd write cfe.bin cfe
+mtd write nvram.bin nvram
+nvram commit
+reboot```
+路由器会自动重启，完成CFE刷写，重新复位次就可看到效果了。
+
+---
 ### 开刷
 不过R8000目前刷没什么困难的。
 
@@ -110,6 +136,7 @@ http://koolshare.cn/thread-73365-1-1.html
 ---
 ## 网件路由救砖
 官方救砖教程：http://club.netgear.cn/Knowledgebase/Document_detail.aspx?Did=873
+也可以使用华硕的固件修复程序：**Firmware_Restoration**
 
 官方救砖教程无效的话就要把螃蟹拆开来，上TTL线。
 ![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170105/151747137.jpg)
