修改许多文件

--- a/source/_posts/杂项/2016-11-11-常用网站链接.md
+++ b/source/_posts/杂项/2016-11-11-常用网站链接.md
@@ -13,7 +13,13 @@ top: 10
 
 ---
 # 解决问题 Q&A
-stackoverflow：http://stackoverflow.com/
+各种报错:[stackoverflow](http://stackoverflow.com/)
+
+Markdown语法：
+[Markdown入门指南](http://www.jianshu.com/p/1e402922ee32/)
+[Markdown中插入数学公式](http://blog.csdn.net/xiahouzuoxin/article/details/26478179)
+
+[iOS APP打包成 ipa包(简单粗暴方法)](http://blog.csdn.net/songchunmin_/article/details/51913423)
 
 ---
 # 运维
@@ -220,9 +226,18 @@ PS 插件和小软件推荐：http://www.4kong.com
 # 工具类网站
 在线转换工具：http://cn.office-converter.com
 Chrome插件网：http://www.cnplugins.com
-
-
-
+网盘数据搬家：www.multcloud.com
 
 ---
+# HTTPS证书
+各大云主机商都有提供免费的开发者证书，一般是一年签一次。另外不建议用沃通，不太稳定，国外产品是不认沃通的，证书还有可能被吊销的风险。
+
+[Let's Encrypt HTTPS 证书快速申请并自动续期](https://liyuans.com/archives/https-certificate-rapid-application-and-automatic-renewal.html)
+
+---
+
+
+
+
+
 
