--- a/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-用Hexo搭建博客.md
@@ -59,7 +59,7 @@ Next官方设置说明：http://theme-next.iissnan.com/getting-started.html
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Leo Lan的博客
+title: LeoLan's Blog
 subtitle:  有时候正是不报期望的人做出了人们不敢期望之事！
 description: Better late than never
 author: LeoLan
@@ -90,19 +90,10 @@ skip_render:
     - README.md
     - .nojekyll
     - Staticfile
-
-# 假设你的Source文件夹里面有个Demo目录，要忽略Demo目录下的所有html页面，具体如下：
-
-# skip_render: Demo/*.html
-# 文件匹配是基于正则匹配的，更复杂的情况如下
-# 1.单个文件夹下全部文件：skip_render: demo/*
-# 2.单个文件夹下指定类型文件：skip_render: demo/*.html
-# 3.单个文件夹下全部文件以及子目录:skip_render: demo/**
-# 4.多个文件夹以及各种复杂情况：
-# skip_render:
-#     - 'demo/*.html'
-#     - 'demo/**'
-
+    - 'love/**'
+    - love/**
+    - 'love/*.html'
+    - love/*.html
 
 #强制包含.nojekyll文件（放在source下），这样hexo g时，.开头的文件具不会被忽略，适用于5.0以下版本的next主题（github屏蔽了一些文件夹）
 include:
@@ -169,8 +160,8 @@ pagination_dir: page
 # Extensions 主题选择
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: next5.1
-#theme: next0.4
+theme: next5.0.1
+#theme: material
 
 
 # Deployment 自动部署到仓库
@@ -184,6 +175,9 @@ deploy:
 - type: git
   repo: git@github.com:MyLeoLan/blog.git,master
   message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'
+#- type: git
+#  repo: git@git.oschina.net:leolan/leolan.git,master
+#  message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'
 #deploy:
 #- type: git
 #  repo:
@@ -214,8 +208,10 @@ baidusitemap:
 social:
   GitHub: https://github.com/myleolan
   Coding: https://coding.net/u/leolan
-  CSDN: http://blog.csdn.net/lan842632
-  OSchina: https://my.oschina.net/leolan/blog
+  Cloud1: http://quickconnect.to/myleolan
+  OSchina: https://git.oschina.net/leolan
+  Cloud2: http://842632422-abc.eicp.net
+  Links: https://www.leolan.top/posts/44568/
   #Twitter: https://twitter.com/lmintlcx
   #Zhihu: http://www.zhihu.com/people/lmintlcx
   #Douban: http://www.douban.com/people/lmintlcx
@@ -237,8 +233,8 @@ wechatpay: http://ofyfogrgx.bkt.clouddn.com//pay/weixinpay.png
 #站点建立时间
 since: 2016
 
-#百度分析
-baidu_analytics: dc0e85252eeff3a87aa87f35d92a8d33
+#百度分析(可能会影响网页加载速度)
+#baidu_analytics: c91eae7f335d73f093d1499eff4b45a7
 
 #本地搜索
 search:
@@ -277,7 +273,7 @@ keywords: "Hexo, NexT, Leo Lan, leolan, Blog, myleolan, lan, coding"
 # Set rss to false to disable feed link.
 # Leave rss as empty to use site's feed link.
 # Set rss to specific value if you have burned your feed already.
-rss:
+rss: https://www.leolan.top/atom.xml
 
 # Specify the date when the site was setup
 #since: 2015
@@ -322,6 +318,7 @@ menu_icons:   #http://fontawesome.io/icons/
   guestbook: commenting
 
 
+
 # ---------------------------------------------------------------
 # Scheme Settings
 # ---------------------------------------------------------------
@@ -344,40 +341,42 @@ font:
   enable: true
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default) 慢的话搜索fonts.googleapis.com即可找到替换地址
-  host: fonts.css.network
+  host: 
+  #fonts.css.network
 
   # Global font settings used on <body> element.
   global:
     # external: true will load this font family from host.
     external: true
     family: Lato
+    #Monda
 
   # Font settings for Headlines (h1, h2, h3, h4, h5, h6)
   # Fallback to `global` font settings.
   headings:
     external: true
-    family:
+    family: 
 
   # Font settings for posts
   # Fallback to `global` font settings.
   posts:
     external: true
-    family:
+    family: Roboto
 
   # Font settings for Logo
   # Fallback to `global` font settings.
   # The `size` option use `px` as unit
   logo:
     external: true
-    family:
-    size:
+    family: Georgia
+    size: 24
 
   # Font settings for <code> and code blocks.
   codes:
     external: true
-    family:
-    size:
-
+    family: 
+    size: 14
+#"Source Code Pro", "PT Mono", "DejaVu Sans Mono", 
 
 
 # ---------------------------------------------------------------
@@ -395,14 +394,16 @@ font:
 #   Map a menu item to a specific FontAwesome icon name.
 #   Key is the name of the item and value is the name of FontAwsome icon. Key is case-senstive.
 #   When an globe mask icon presenting up means that the item has no mapping icon.
-social_icons:    #这是社交链接图标，打开网站找到图标，直接引用名字就行，next已引用了该库http://fontawesome.io/icons/
+social_icons:    #http://fontawesome.io/icons/
   enable: true
   # Icon Mappings.
   # KeyMapsToSocalItemKey: NameOfTheIconFromFontAwesome
   GitHub: github
   Coding: github-alt
-  Cloud: cloud
+  Cloud1: cloud
+  Cloud2: cloud
   OSchina: git-square
+  #松松视频: video-camera
   #Twitter: twitter
   #Weibo: weibo
 
@@ -420,11 +421,13 @@ toc:
   # Automatically add list number to toc.
   number: true
 
+
 # Creative Commons 4.0 International License.
 # http://creativecommons.org/
 # Available: by | by-nc | by-nc-nd | by-nc-sa | by-nd | by-sa | zero
 #creative_commons: by-nc-sa
 #creative_commons:
+
 
 sidebar:
   # Sidebar Position, available value: left | right
@@ -449,6 +452,14 @@ links_icon: heartbeat
 #links_layout: inline
 links:
   Jerry Locke: https://jerry.hk/
+  Raintons: http://login926.top
+  DIYgod: https://www.anotherhome.net
+  小黑: http://mblack.cn/
+  Jing's Blog: http://www.iamlj.com/
+  cyang's blog: http://cyang.tech/
+  一路向北: http://www.showerlee.com/
+  卢松松的博客: http://lusongsong.com/
+  松松视频: http://v.lusongsong.com/  
 
 # ---------------------------------------------------------------
 # Misc Theme Settings
@@ -497,7 +508,7 @@ auto_excerpt:
 
 # MathJax Support 数学公式
 mathjax:
-  enable: false
+  enable: true
   cdn: //cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML
 
 #各种第三方服务
@@ -521,7 +532,7 @@ mathjax:
 ##  type: button
 
 # Share
-jiathis: true
+jiathis: false
 # Warning: JiaThis does not support https.
 #add_this_id:
 
@@ -576,7 +587,7 @@ leancloud_visitors:
   app_id: zieuxKa4IjAP6VgxxvBe4vkj-gzGzoHsz
   app_key: MHGN54IEuofFNV1AROiRkEoG
 
-# Show PV/UV of the website/page with busuanzi. 不蒜子网站访问量统计
+# Show PV/UV of the website/page with busuanzi. 不算子网站访问量统计
 # Get more information on http://ibruce.info/2015/04/04/busuanzi/
 #busuanzi_count:
   # count values only if the other configs are false
@@ -1920,7 +1931,7 @@ hexo d       #部署到Github上```
 部署完成打开网址就能看到效果了。
 
 Hexo的部署只会把生成的文件上传到仓库中，本地的**设置，主题，*.md文件**等等都不会上传，换一台电脑就没法干活了，一旦删除，那基本上所有的努力都白费了，这里介绍2种备份方法：
-* 1.新建一个仓库专门用来存放这些文件（最安全最方便的办法）
+* 1.新建一个仓库专门用来存放这些文件（最安全最方便管理的办法）
 * 2.和发布的网站使用同一个仓库，master用来存放这些文件，新建分支来发布网站（注意pages服务绑定该分支，不要合并分支，一旦合并就全部混乱了）
 两种方法都要在网站根目录设定好远程端仓库：`git add remote XXXX`
 每次发布完网页，就顺手执行以下代码，把文档也同步到仓库中。
@@ -1929,6 +1940,50 @@ git add .
 git commit -m "xxx"
 git push
 ```
+本博客目前是源文件分为github和coding两个仓库，发布的博客也是部署在github和coding两个不同的仓库。域名做了国内外IP分流。
+
+**站点配置文件**
+```
+# Deployment 自动部署到仓库
+## 官方文档Docs: https://hexo.io/docs/deployment.html   有部署到各种服务器的方法
+## 参考：http://www.lxway.com/240950852.htm
+#不管是github还是coding，type都填写git
+deploy:
+- type: git
+  repo: git@git.coding.net:leolan/blog.git,master
+  message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'  #这个是commit的说明，因为是发布站点，方便看到发布时间。
+- type: git
+  repo: git@github.com:MyLeoLan/blog.git,master
+  message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'
+#- type: git
+#  repo: git@git.oschina.net:leolan/leolan.git,master
+#  message: 'LeoLan updated：{{now("YYYY-MM-DD HH:mm:ss")}}'
+```
+
+**git config文件**
+```
+[core]
+	repositoryformatversion = 0
+	filemode = false
+	bare = false
+	logallrefupdates = true
+	symlinks = false
+	ignorecase = true
+[remote "origin"]
+	url = git@git.coding.net:leolan/blogpost.git
+	url = git@github.com:MyLeoLan/blogpost_backup.git
+[branch "master"]
+	remote = origin
+	merge = refs/heads/master
+```
+
+---
+## Travis CI
+Travis CI是一个类似于jenkins的一种持续构建工具
+**Travis CI 持续集成自动部署Hexo**：https://www.karlzhou.com/2016/05/28/travis-ci-deploy-blog/
+
+
+---
 
 ---
 
