--- a/source/_posts/系统管理/2016-11-25-Linux常用命令.md
+++ b/source/_posts/系统管理/2016-11-25-Linux常用命令.md
@@ -14,6 +14,52 @@ date: 2016-11-25 11:23:02
 分析空间大小（根目录下个文件夹大小）:`du -sh /*`
 
 ---
+## 硬盘检测
+### badblocks
+badblock命令用于查找磁盘中损坏的区块，是一个很好的检查坏道位置的工具。
+
+语法： **badblock (选项) (参数) **
+
+选项
+**-b<区块大小>**：指定磁盘的区块大小，单位为字节； 
+**-o<输出文件>**：将检查的结果写入指定的输出文件； 
+**-s**：在检查时显示进度； 
+**-v**：执行时显示详细的信息； 
+**-w**：在检查时，执行写入测试。 
+**-c**：指定检查次数。
+
+参数 
+**磁盘装置**：指定要检查的磁盘装置； 
+**磁盘区块数**：指定磁盘装置的区块总数； 
+**启始区块**：指定要从哪个区块开始检查。
+
+使用fdisk命令识别硬盘信息 
+```
+sudo fdisk -l ```
+扫描硬盘的损坏扇区或区块
+```
+sudo badblocks -v /dev/sdb > /tmp/bad-blocks.txt```
+扫描完成后，如果损坏区块被发现了，然后通过e2fsck命令使用“bad-blocks.txt”，强迫操作系统不使用这些损坏的区块存储数据。
+```
+sudo e2fsck -l /tmp/bad-blocks.txt  /dev/sdb```
+**注意**：在运行e2fsck命令前，请保证设备没有被挂载。
+
+#### 对可疑的区块多做几次操作
+以4096字节为一个“block”,每一个“block”**检查1次**, 将结果输出到“**/tmp/bad-blocks2.txt**”文件中，由第51000 block开始，到63000 block结束，同时屏幕输出详细信息。 
+```
+badblocks -v -b 4096 -c 1 /dev/sdb -o /tmp/bad-blocks2.txt 63000 51000```
+
+#### fsck使用badblocks的信息
+badblocks只会在日志文件中标记出坏道的信息，但若希望在检测磁盘时也能跳过这些坏块不检测，可以使用fsck的-l参数
+```
+fsck.ext3 -l /tmp/bad-blocks.txt /dev/sdb```
+
+#### 在创建文件系统前检测坏道
+badblocks可以随e2fsck和mke2fs的-c一起运行（对ext3文件系统也一样），在创建文件系统前就先检测坏道信息，使用**-c在创建文件系统前检查坏道的硬盘**。 mkfs.ext3 -c选项用**read-only**方式检查硬盘，会在格式化硬盘时检查硬盘，并标出错误的硬盘“**block**”。
+```
+mkfs.ext3 -c /dev/sdb1```
+
+---
 ## 定时任务
 ```
 crontab status                #crontab 状态 
