--- a/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
@@ -1,9 +1,9 @@
 ---
-title: 用Hexo搭建博客
+title: Hexo 搭建博客
 categories:
   - 环境搭建
 tags:
-  - 用Hexo搭建博客
+  - Hexo 搭建博客
   - Hexo github
   - Hexo Coding
   - Next 定制
@@ -1079,6 +1079,8 @@ font:
 
 ---
 ### 最近访客
+**模板位置**：themes\next\layout\\_macro\reward.swig
+在最后换行加上这段代码。
 ```
 <h3 id="最近访客"><a href="#最近访客" class="headerlink" title="最近访客"></a>最近访客</h3><div class="ds-recent-visitors" data-num-items="28" data-avatar-size="42" id="ds-recent-visitors"></div>```
 ```
