--- a/source/_posts/环境搭建/2016-11-08-Jekyll 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Jekyll 搭建博客.md
@@ -1,9 +1,9 @@
 ---
-title: 用Jekyll搭建博客
+title: Jekyll 搭建博客
 categories:
   - 环境搭建
 tags:
-  - 用Jekyll搭建博客
+  - Jekyll 搭建博客
   - jekyll github
   - jekyll Coding
 abbrlink: 56436
