--- a/source/_posts/系统管理/2017-01-06-RAID.md
+++ b/source/_posts/系统管理/2017-01-06-RAID.md
@@ -38,10 +38,10 @@ RAID 包含一组或者一个集合甚至一个阵列。使用一组磁盘结合
 
 RAID有不同的级别。在这里列出在真实环境下的使用最多的 RAID 级别。其他级别的阵列参考：[磁盘阵列](http://baike.baidu.com/link?url=-Oj6p9Kk0y5M7yNzaGrxRIECftLqNj5MqUg6qOZ4krc0RqxJhEZu61E1LCgjJORlpf6oV8qbnMQM4HIvL4MLLz80J-nCnAPse7xJI3wvdPuRHy5Gm9RTZ4CXpoKRl7AjSjU-ie9p4dgBF9ZpFdSB2f0-n9YDpFMlX2kzNntXViO)
 
-RAID0 = 条带化
-RAID1 = 镜像
-RAID5 = 单磁盘分布式奇偶校验
-RAID6 = 双磁盘分布式奇偶校验
+RAID0 = 条带化　　　**提高读写性能**
+RAID1 = 镜像　　　　**提高读写性能、冗余性**
+RAID5 = 单磁盘分布式奇偶校验　　　**提高读写性能、冗余性(允许1块硬盘发生故障)**
+RAID6 = 双磁盘分布式奇偶校验　　　**提高读写性能、冗余性(运行2块硬盘发生故障)**
 RAID10 = 镜像 + 条带。（嵌套RAID）
 **RAID 在大多数 Linux 发行版上使用名为 mdadm 的软件包进行管理。**
 
@@ -141,16 +141,113 @@ RAID 10 可以被称为1 + 0或0 +1。它将做**镜像+条带**两个工作。
 # RAID 容量计算器
 **这里引用了群晖官方的RAID计算器。**
 <center>
-    <h2><a href="http://ofyfogrgx.bkt.clouddn.com/blog/20170106/173559041.html" title="RAID容量计算器" target="_blank" rel="external nofollow">RAID 容量计算器</a></h2>
+    <h2><font color="#F75000"><a href="http://ofyfogrgx.bkt.clouddn.com/blog/20170106/173559041.html" target="_blank" rel="external nofollow">RAID 容量计算器</a></font></h2>
 </center>
 
 ---
+
+---
 # 管理RAID
-Linux系统基本都带有 mdadm 软件包。
+---
+## mdadm
+### 安装mdadm
+Linux系统基本都带有 mdadm 软件包。没有的话先安装
+```
+yum install mdadm -y
+apt-get install mdadm
+```
+
+---
+下面盗几张图，自己没有截图啦。
+#### 新建分区
+创建RAID0 需要两块硬盘，拿/dev/sdb 和/dev/sdc 来实验。
+```
+fdisk /dev/sdb        #对sdb 进行分区```
+输入"m", 获取帮助，输入"p", 查看分区前磁盘状态。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170112/113446699.png)
+输入"n" 新建分区，将整个磁盘都划分成一个分区，然后输入"p" 查看分区情况。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170112/113554117.png)
+
+---
+#### 修改分区类型
+默认新建分区的类型是Linux，代号83，需要将其修改为raid 类型。输入"t" ，然后输入"L" 
+
+列出所有的文件格式，这里我们选择"fd Linux raid auto", 输入"fd"，然后再输入"p" 查看分区情况，分区格式已经变成了Linux raid autodetect。
+![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20170112/113637514.png)
+输入"w" 保存分区。
+使用同样方法对/dev/sdc 进行分区操作。
+
+---
+#### 同步分区情况
+使用`partprobe` 命令同步分区情况。
+
+查看现在的状态`fdisk -l /dev/sdb /dev/sdc`
+
+#### 用sdb和sdc创建RAID 0：
+```
+mdadm -C /dev/md0 -a yes -l 0 -n 2 /dev/sdb /dev sdc
+或
+mdadm -C /dev/md0 -ayes -l0 -n2 /dev/sd[b,c]1```
+
+|选项|说明|
+|--|--|
+|-C，\--create|创建阵列|
+|-a，\--auto|同意创建设备，如不加此参数时必须先使用mknod 命令来创建一个RAID设备，不过推荐使用-a yes参数一次性创建|
+|-l，\--level|阵列模式，支持的阵列模式有 linear, raid0, raid1, raid4, raid5, raid6, raid10, multipath, faulty, container|
+|-n，\--raid-devices |阵列中活动磁盘的数目，该数目加上备用磁盘的数目应该等于阵列中总的磁盘数目|
+|/dev/md0　|阵列的设备名称|
+|/dev/sd{b,c}1　|参与创建阵列的磁盘名称|
+
+---
+#### 创建RAID 配置文件/etc/mdadm.conf
+
+RAID 的配置文件为**/etc/mdadm.conf**，默认是不存在的，需要手工创建。
+
+该配置文件的主要作用是系统启动的时候能够自动加载软RAID，同时也方便日后管理。但不是必须的，**推荐对该文件进行配置**。
+
+我们这里需要创建这个文件，测试中发现，如果没有这个文件，则reboot 后，已经创建好的md0 会自动变成md127。
+
+/etc/mdadm.conf 文件内容包括：
+由**DEVICE** 选项指定用于软RAID的所有设备。
+**ARRAY** 选项所指定阵列的设备名、RAID级别、阵列中活动设备的数目以及设备的UUID号。
 
 
+**创建/etc/mdadm.conf**
+```
+echo DEVICE /dev/sd{b,c}1 >> /etc/mdadm.conf
+mdadm –Ds >> /etc/mdadm.conf```
+
+---
+#### 修改配置文件
+
+当前生成的/etc/mdadm.conf 文件内容并不符合所规定的格式，所以也是不生效的，这时需要手工修改该文件内容为如下格式：
+```
+# cat /etc/mdadm.conf
+
+DEVICE /dev/sdb1 /dev/sdc1
+
+ARRAY /dev/md0 level=raid0 num-devices=2 UUID=5160ea40:cb2b44f1:c650d2ef:0db09fd0```
+
+---
+#### 格式化磁盘阵列
+```
+mkfs.ext4 /dev/md0```
+
+#### 建立挂载点并挂载
+```
+mkdir /raid0
+mount /dev/md0 /raid0/```
+
+---
+####  写入/etc/fstab
+
+为了下次开机还能正常使用我们的RAID设备，需要将挂载的信息写入/etc/fstab 文件中。然后reboot 测试开机是否自动挂载，raid0 创建完毕。
 
 
+---
+参考资料：
+http://www.centoscn.com/image-text/config/2015/0213/4713.html
+http://www.cnblogs.com/mchina/p/linux-centos-disk-array-software_raid.html
 
 ---
 
