--- a/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
@@ -901,9 +901,11 @@ date: 2016-11-14 17:21:10
 <blockquote class="blockquote-center">
 <!--网易云音乐的http地址，改为https，用https加载http资源会被屏蔽-->
     <h2>Stay Hungry,Stay Foolish</h2>
-   <!--<embed src="https://music.163.com/style/swf/widget.swf?sid=34971711&type=1&auto=1&width=310&height=90" width="330" height="110"  allowNetworking="all"></embed>
-   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="https://music.163.com/outchain/player?type=1&id=34971711&auto=1&height=90"></iframe>-->
+   <!--
+   <embed src="https://music.163.com/style/swf/widget.swf?sid=34971711&type=1&auto=1&width=310&height=90" width="330" height="110"  allowNetworking="all"></embed>
+   <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=110 src="https://music.163.com/outchain/player?type=1&id=34971711&auto=1&height=90"></iframe>
    <embed src="https://music.163.com/style/swf/widget.swf?sid=32507038&type=2&auto=1&width=320&height=66" width="340" height="86"  allowNetworking="all"></embed>
+   -->
    <!--这里是插入视频的方法
 	<iframe src="//www.youtube.com/embed/JMl8cQjBfqk" width="560" height="315" frameborder="0" allowfullscreen></iframe>-->
 </blockquote>
@@ -1897,6 +1899,40 @@ skip_render:
 ---
 ### 加入左上角「fork me on github」
 [github官方教程](https://github.com/blog/273-github-ribbons)
+
+---
+### 返回顶部按钮
+修改：themes/next5.0.1/source/css/_variables/base.styl
+找到以下这段代码
+```
+// Components
+// --------------------------------------------------
+
+// Back to top
+$b2t-opacity                  = 1
+$b2t-position-bottom          = -100px
+$b2t-position-bottom-on       = 19px
+//$b2t-position-right         = 50px
+$b2t-position-left            = 85px   //这段代码是新增的，注释掉上面哪行代码。 
+$b2t-font-size                = 12px
+$b2t-color                    = white
+$b2t-bg-color                 = $black-deep```
+
+接着修改themes/next5.0.1/source/css/_custom/custom.styl
+或themes/next5.0.1/source/css/_common/components/back-to-top.styl
+找到以下这段代码
+```
+//返回顶部按钮样式
+.back-to-top {
+  box-sizing: border-box;
+  position: fixed;
+  bottom: $b2t-position-bottom;
+  //right: $b2t-position-right;
+  left: $b2t-position-left;      //这段代码是新增的，注释掉上面哪行代码。
+  z-index: $zindex-5;
+  padding: 0 6px;
+  width: 25px;
+  background: $b2t-bg-color;```
 
 ---
 ### 给 Blog 添加 LICENSE
