--- a/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
+++ b/source/_posts/环境搭建/2016-11-08-Hexo 搭建博客.md
@@ -1876,7 +1876,7 @@ body { background:url(/images/backGround.jpg);} ```
         {% endif %}```
 
 如果需要并排显示，像这样子：![mark](http://ofyfogrgx.bkt.clouddn.com/blog/20161205/154359849.png)
-修改文件：**\themes\source\css\_schemes\Pisces（主题风格对应的文件夹）\_sidebar.styl**
+修改文件：**\themes\source\css\\_schemes\Pisces（主题风格对应的文件夹）\_sidebar.styl**
 找到这样一段，把**display: block;**改为**display: inline-block;**
 ```
 .feed-link a {
